--- a/package.json
+++ b/package.json
@@ -40,32 +40,38 @@
   },
   "homepage": "https://github.com/miukimiu/react-kawaii#readme",
   "devDependencies": {
-    "autoprefixer": "^6.7.7",
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-env": "^1.5.1",
-    "css-loader": "^0.26.1",
-    "eslint": "^3.17.1",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-prettier": "^2.4.0",
-    "eslint-plugin-react": "^6.10.0",
-    "extract-text-webpack-plugin": "^2.0.0-rc.1",
-    "file-loader": "^0.9.0",
-    "gh-pages": "^1.1.0",
-    "html-webpack-plugin": "^2.22.0",
-    "lint-staged": "^3.4.1",
-    "postcss": "^5.2.17",
-    "prettier": "^1.9.2",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
-    "react-styleguidist": "^6.1.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^2.2.0"
+    "autoprefixer": "8.2.0",
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.4",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-plugin-transform-react-jsx": "6.24.1",
+    "babel-preset-env": "1.6.1",
+    "css-loader": "0.28.11",
+    "eslint": "4.19.1",
+    "eslint-config-airbnb": "16.1.0",
+    "eslint-plugin-import": "2.10.0",
+    "eslint-plugin-jsx-a11y": "6.0.3",
+    "eslint-plugin-prettier": "2.6.0",
+    "eslint-plugin-react": "7.7.0",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "1.1.11",
+    "gh-pages": "1.1.0",
+    "html-webpack-plugin": "3.1.0",
+    "joyent-react-styled-flexboxgrid": "^2.2.3",
+    "lint-staged": "7.0.2",
+    "postcss": "6.0.21",
+    "prettier": "1.11.1",
+    "react": "16.3.0",
+    "react-dom": "16.3.0",
+    "react-styleguidist": "7.0.1",
+    "remcalc": "^1.0.10",
+    "style-loader": "0.20.3",
+    "styled-components": "^3.2.5",
+    "styled-components-spacing": "^3.0.0",
+    "styled-flex-component": "^2.2.2",
+    "webpack": "4.4.1",
+    "webpack-cli": "^2.0.13"
   },
   "dependencies": {},
   "engines": {
